# CrewAI_Docs

Agents/agent_with_direct_code_definition/: README.md  pyproject.toml  report.md
Agents/agent_with_direct_code_definition/src/agent_with_direct_code_definition/: crew.py  main.py
Agents/agents_with_yaml_configuration/: README.md  pyproject.toml  report.md
Tasks/first_tasks/: README.md  pyproject.toml  report.md
Tasks/first_tasks/src/first_tasks/: crew.py  main.py
Tasks/first_tasks/src/first_tasks/config/: tasks.yaml
Tasks/task_dependencies_and_context/: README.md  pyproject.toml  report.md
Tasks/task_dependencies_and_context/src/task_dependencies_and_context/: crew.py  main.py
Tasks/task_guardrails/: README.md  pyproject.toml  report.md
Tasks/task_guardrails/src/task_guardrails/: crew.py  main.py
Tasks/task_guardrails/src/task_guardrails/config/: agents.yaml  tasks.yaml
Tasks/tasks_with_direct_configuration/: README.md  pyproject.toml  report.md
Tasks/tasks_with_direct_configuration/src/tasks_with_direct_configuration/: crew.py  main.py
agents_with_yaml_configuration/: report.md
agents_with_yaml_configuration/src/agents_with_yaml_configuration/: crew.py  main.py
agents_with_yaml_configuration/src/agents_with_yaml_configuration/config/: tasks.yaml
