[project]
name = "agents_with_yaml_configuration"
version = "0.1.0"
description = "Agents_with_yaml_configuration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
run_crew = "agents_with_yaml_configuration.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
